# ps_parprog_2022

01/: all.eps  assignment_01.sh  fast  fast.eps  medium  medium.eps  plot_ex1.m  plot_ex1.m~  slow  slow.eps
01/html/: plot_ex1.html
02/: CMakeLists.txt  README.md  hand_in_info.txt  plot_ex2.m  plot_montecarlo.fig
02/hadamard/: Makefile  assignment_02_hadamard.sh  cachegrind.out.24940  hadamard  hadamard.c  hadamard.h  hadamard_v1  hadamard_v1.c  hadamard_v2  hadamard_v2.c
02/mandelbrot/: Makefile  assignment_02_mandelbrot.sh  mandelbrot  mandelbrot.c
02/montecarlo_pi/: Makefile  assignment_02_montecarlo.sh  parallel  parallel.c  parallel_1_thread  parallel_2_thread  parallel_3_thread  parallel_4_thread  parallel_5_thread  parallel_6_thread  parallel_7_thread  parallel_8_thread  parallel_pk  parallel_pk.c  parallel_v2  parallel_v2.c  serial  serial.c
